[tool.poetry]
name = "joe-sor-v1"
version = "0.1.0"
description = ""
authors = ["Darius Foodeei <darius.foodei@gmail.com>"]
readme = "README.md"
packages = [{include = "joe_sor_v1"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
